# fava-dashboards

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.test  LICENSE.md  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: continuous-integration.yaml  continuous-integration.yml  release.yml
docs/examples/multiple-files/: example.beancount  package-lock.json  tsconfig.json
docs/examples/multiple-files/dashboards/: assets.tsx  income.tsx  index.ts
example/: Pipfile  dashboards.js  dashboards.jsx  dashboards.tsx  dashboards.yaml  example.beancount  fava-dashboards.d.ts  portfolio.beancount
example/multiple-files-example/: .gitignore  Makefile  README.md  fava-dashboards.d.ts  package-lock.json  package.json
fava_dashboards/: FavaDashboards.js  __init__.py
fava_dashboards/static/: dashboard.js  sankey.js  style.css
fava_dashboards/templates/: FavaDashboards.html
frontend/: .gitignore  .prettierrc.json  eslint.config.mjs  jest-puppeteer.config.js  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/scripts/: build-dts.ts  build-echarts-themes.ts  bundle-dts.ts  convert-echarts-themes.js  generate-echarts-themes.ts
frontend/scripts/dts/: @mui__x-data-grid  @types__d3-sankey
frontend/src/: app.tsx  dashboard.tsx  echartsTheme.ts  echartsThemes.ts  extension.ts  helpers.ts  index.ts  navigation.tsx  panels.ts  router.ts  router.tsx  sankey.ts  theme.tsx  types.ts
frontend/src/api/: api.ts  config.ts  ledger.ts  query.ts  renderPanel.ts  url.ts
frontend/src/components/: ConfigProvider.tsx  D3Sankey.tsx  EChart.tsx  ErrorAlert.tsx  Header.tsx  ReactRouterAdapter.ts  hooks.ts  utils.ts
frontend/src/model/: dashboard.ts  migrations.ts  v1.ts  v1_helpers.ts
frontend/src/pages/: Dashboard.tsx  Layout.tsx
frontend/src/pages/Dashboard/: Dashboard.tsx  Panel.tsx  Variables.tsx
frontend/src/panels/: D3SankeyPanel.tsx  EChartsPanel.tsx  HtmlPanel.tsx  ReactPanel.tsx  TablePanel.tsx  registry.ts
frontend/src/panels/echarts/: EChartsPanel.tsx
frontend/src/panels/echarts/themes/: azul.ts  bee-inspired.ts  blue.ts  caravan.ts  carp.ts  cool.ts  dark-blue.ts  dark-bold.ts  dark-digerati.ts  dark-fresh-cut.ts  (+28 more)
frontend/src/routes/: __root.tsx  dashboard.tsx
frontend/src/routes/dashboard/: Panel.tsx  Variables.tsx
frontend/src/schemas/: migrations.ts  v2.ts
frontend/src/schemas/v1/: migrate.ts  v1.ts  v1_helpers.ts
frontend/src/schemas/v2/: builder.ts  dashboard.ts  ledger.ts  schema.ts  validation.ts  variables.ts
frontend/tests/dashboards/: _testdata.beancount  dashboards.tsx  feature_tests.beancount  feature_tests.tsx  features.beancount  features.tsx  multiple-files  multiple-files-example  themes.beancount  themes.tsx  tsconfig.json  v1.beancount  v1.yaml
frontend/tests/e2e/: dashboards.test.js  dashboards.test.ts  snapshots.test.ts
frontend/tests/e2e/__snapshots__/: dashboards.test.js.snap  dashboards.test.ts.snap
frontend/tests/e2e/dashboards.test.ts-snapshots/: HTML-Snapshot-Tests-Assets-1.aria.yml  HTML-Snapshot-Tests-Income-and-Expenses-1.aria.yml  HTML-Snapshot-Tests-Overview-1.aria.yml  HTML-Snapshot-Tests-Projection-1.aria.yml  HTML-Snapshot-Tests-Sankey-1.aria.yml  HTML-Snapshot-Tests-Travelling-1.aria.yml
frontend/tests/e2e/snapshots.test.ts-snapshots/: HTML-Snapshot-Tests-Assets-1.aria.yml  HTML-Snapshot-Tests-Income-and-Expenses-1.aria.yml  HTML-Snapshot-Tests-Overview-1.aria.yml  HTML-Snapshot-Tests-Sankey-1.aria.yml  HTML-Snapshot-Tests-Travelling-1.aria.yml
frontend/tests/example/: fava-dashboards.d.ts
scripts/: convert_dashboards_yaml_to_tsx.py  format_js_in_dashboard.py  update_changelog.py
src/fava_dashboards/: FavaDashboards.js  __init__.py  legacy.py  utils.py  utils_test.py
src/fava_dashboards/templates/: FavaDashboards.html  style.css
tests/e2e/: jest-puppeteer.config.js  package-lock.json  package.json
tests/e2e/__snapshots__/: dashboards.test.js.snap
