[project]
name = "fava-dashboards"
dynamic = ["version"]
description = "Custom Dashboards for Beancount in Fava"
readme = "README.md"
license = {text = "MIT License"}
license-files = [
  "LICENSE.md",
]
authors = [
    { name = "Andreas Gerstmayr", email = "andreas@gerstmayr.me" }
]
keywords = ["fava", "beancount", "dashboards"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">= 3.10"
dependencies = [
    "fava>=1.30.12",
    "pyyaml>=6.0.1",
    "beanquery>=0.1.0",
]

[project.urls]
Source = "https://github.com/andreasgerstmayr/fava-dashboards"
Issues = "https://github.com/andreasgerstmayr/fava-dashboards/issues"
Changelog = "https://github.com/andreasgerstmayr/fava-dashboards/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.9.0",
    "pylint>=3.1.0",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
    "ty>=0.0.13",
    "types-PyYAML>=6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/fava_dashboards"]

[tool.pylint.'messages control']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "no-else-return",
    "line-too-long",
]

[[tool.mypy.overrides]]
module = "beanquery.query"
ignore_missing_imports = true

[tool.ty.rules]
# some comments are required by mypy
unused-ignore-comment = "ignore"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
