[metadata]
name = fava-dashboards
license = MIT
author = Andreas Gerstmayr
author_email = andreas@gerstmayr.me
url = https://github.com/andreasgerstmayr/fava-dashboards

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    fava>=1.26
    beancount
    pyyaml

[options.packages.find]
where = src
